1999-05-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-image.c (gnome_canvas_image_set_arg): Queue an
	update when the image's anchor point changes.  I don't think Raph
	ever tested this.

1999-05-16  Robert Brady <rwb197@ecs.soton.ac.uk>

	* gnome-calculator.c (c_fact): The second fixes the calculator
	widget so it can do factorials of almost-integer numbers (thereby
	letting people do 2, square root, square, factorial). This
	resolves bug #1267.
	
	* gnome-spell.c: Avoid infinite loop.

1999-05-07  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-dock-band.c (gnome_dock_band_draw): Made static.

Mon May 03 01:02:11 1999  George Lebl  <jirka@5z.com>

	* gnome-propertybox.c: add two more g_return_if_fail's to at least
	  warn of no current page on the notebook (this can happen somehow)

1999-04-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_expose): Build a microtile array
	from the expose area directly, instead of going through
	gnome_canvas_request_redraw().  This ensures that we'll repaint
	off-screen areas if requested.

1999-04-22  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (add_idle): New function to centralize adding of
	the idle handlers.
	(remove_idle): New function to centralize the removal of idle
	handlers.
	(gnome_canvas_update_now): Use remove_idle().  Do not call
	gdk_flush().
	(gnome_canvas_request_update): Use add_idle().
	(gnome_canvas_request_redraw_uta): Use add_idle().
	(idle_handler): Reset the canvas->idle_id to zero.

1999-04-26  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-mdi-generic-child.h (GNOME_IS_MDI_MDI_CHILD): Remove.  Is
	now in gnome-compat.h.
	
1999-04-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-about.c (gnome_destroy_about): Release gai as well.

1999-04-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* libgnomeui.h: include gnome-compat.h

	* gnome-compat.h: New file for compatibility source code
	functions. 